--- a/styles/style.css
+++ b/styles/style.css
@@ -1,155 +1,353 @@
 /* universal controlllllll */
 *,
 html {
-	padding: 0;
-	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  scroll-behavior: smooth;
 }
 
 /* make it flex column */
 body {
-	display: flex;
-	flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 /* section style */
-div.section {
-	display: flex;
-	flex-direction: column;
+.section {
+  display: flex;
+  flex-direction: column;
 }
 
 /* header */
 .header {
-	background-color: #272727;
-	color: #ebdbb2;
-	padding: 2vh 30vh 20vh 30vh;
-	gap: 5em;
+  background-color: #272727;
+  color: #ebdbb2;
+  padding: 2vh 30vh 20vh 30vh;
+  gap: 5em;
+  height: 100vh;
 }
 
-div.section .menu {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	gap: 2em;
-	align-items: center;
+.section .menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 2em;
+  align-items: center;
 }
 
-div.section .menu a {
-	text-decoration: none;
-	color: #ebdbb2;
+.menu a {
+  font-size: large;
+  text-decoration: none;
+  color: #ebdbb2;
 }
 
-div.section .menu-logo {
-	flex: 1 auto;
+.menu a:hover {
+  font-size: large;
+  text-decoration: none;
+  color: #448488;
 }
 
-div.section .content {
-	display: flex;
-	align-items: center;
-	gap: 3em;
-}
-div.section .content-1 {
-	display: flex;
-	flex-direction: column;
-	gap: 5px;
-	flex: 1;
-}
-div.section .content-2 {
-	display: flex;
-	flex: 2;
-	background-color: #ebdbb2;
-	color: #272727;
-	width: 90vh;
-	height: 200px;
-	justify-content: center;
-	align-items: center;
+.section .menu-logo {
+  flex: 1 auto;
 }
 
-div.section .content-1 button {
-	background-color: #448488;
-	color: #ebdbb2;
-	padding: 5px 2em;
-	font-weight: 900;
-	border: 0;
-	border-radius: 5px;
+.section .content {
+  display: flex;
+  align-items: center;
+  gap: 3em;
+}
+.section .content-1 {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+  flex: 1;
+}
+.section .content-2 {
+  display: flex;
+  flex: 2;
+  background-image: url("https://images.unsplash.com/photo-1514888286974-6c03e2ca1dba?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1143&q=80");
+  background-position: center;
+  color: #272727;
+  height: 30em;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+}
+
+.section .content-1 button {
+  background-color: #448488;
+  color: #ebdbb2;
+  padding: 5px 2em;
+  font-weight: 900;
+  border: 0;
+  border-radius: 5px;
 }
 
 .info {
-	padding: 15vh 30vh;
-	gap: 3em;
+  padding: 15vh 30vh;
+  gap: 3em;
 }
 
-div.section .info-title {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	color: #272727;
+.section .info-title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #272727;
 }
 
-div.section .info-images {
-	display: flex;
-	gap: 1em;
-	justify-content: center;
+.section .info-images {
+  display: flex;
+  gap: 1em;
+  justify-content: center;
 }
 
-div.section .info-images .images {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	text-align: center;
+.section .info-images .images {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
-div.section .info-images .images .box {
-	border: 4px solid #448488;
-	border-radius: 10px;
-	width: 20vh;
-	height: 20vh;
-}
-
-.quotes {
-	background-color: #eeeeee;
-	padding: 9em 40vh;
-	display: flex;
-	flex-direction: column;
+.section .info-images .images .box {
+  border: 3px solid #448488;
+  border-radius: 4px;
+  background-position: center;
+  object-fit: cover;
+  margin: 1em 0 1em 0;
+  width: 30vh;
+  height: 40vh;
 }
 
-.quotes em {
-	font-weight: 300;
-	font-size: 2em;
-	font-style: italic;
+.biodata {
+  background-color: #eeeeee;
+  padding: 9em 40vh;
+  display: flex;
+  flex-direction: column;
 }
 
-.quotes .right {
-	font-size: 1em;
-	display: flex;
-	justify-content: flex-end;
-	align-items: flex-end;
+.biodata em {
+  font-weight: 300;
+  font-size: 2em;
+  font-style: italic;
 }
 
-.sign-up {
-	padding: 8em 30vh;
+.biodatas {
+  display: flex;
+  flex-direction: row;
+  gap: 5em;
 }
 
-.sign-ups {
-	background-color: #448488;
-	color: #ebdbb2;
-	border-radius: 5px;
-	padding: 3em 20vh;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+.biodatas .bio-1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 2em;
 }
 
-.sign-ups button {
-	background-color: transparent;
-	color: #ebdbb2;
-	border: 2px solid #ebdbb2;
-	border-radius: 5px;
-	padding: 5px 30px;
+.biodatas .bio-1 a {
+  color: #004368;
+  text-decoration: none;
+}
+
+.biodatas .bio-1 .links {
+  display: flex;
+  gap: 1.5em;
+}
+
+.biodatas .bio-1 a:hover {
+  color: #448488;
+  text-decoration: none;
+}
+
+.biodatas .bio-2 {
+  display: flex;
+  gap: 2em;
+  font-size: 18px;
+  font-weight: 500;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.biodatas img {
+  border-radius: 50%;
+}
+
+.biodata .right {
+  font-size: 1em;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+.bio-2 .right{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.contact {
+  padding: 8em 30vh;
+}
+
+.contacts {
+  background-color: #448488;
+  color: #ebdbb2;
+  border-radius: 5px;
+  padding: 3em 20vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.contacts button {
+  background-color: transparent;
+  color: #ebdbb2;
+  border: 2px solid #ebdbb2;
+  border-radius: 5px;
+  padding: 5px 30px;
 }
 
 .footer {
-	text-align: center;
-	padding: 1em 20vh;
-	background-color: #eeeeee;
+  text-align: center;
+  padding: 1em 20vh;
+  color: #ebdbb2;
+  background-color: #272727;
+}
+
+.boom:hover {
+  background-color: #ebdbb2;
+  color: #272727;
+  font-weight: bold;
+  border: 3px solid black;
+}
+
+@media only screen and (max-width: 1400px) {
+  .section .info-images .images .box {
+    width: 20vh;
+    height: 30vh;
+  }
+
+  .header{
+    height: auto;
+  }
+
+  .contact {
+    padding: 0;
+  }
+
+  .contacts {
+    padding: auto;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .section {
+    display: block;
+    flex-direction: column;
+  }
+
+  .section .menu {
+    justify-content: center;
+    gap: 2em;
+    align-items: center;
+  }
+
+  .header {
+    background-color: #272727;
+    color: #ebdbb2;
+    padding: 2em;
+    gap: 5em;
+    height: auto;
+  }
+
+  .info {
+    padding: 2em 0;
+  }
+
+  .info .info-images p {
+    width: 20vh;
+  }
+
+  .biodata {
+    display: block;
+    padding: 0;
+  }
+
+  .biodatas {
+    display: flex;
+    flex-direction: column-reverse;
+    padding: 2em 2em;
+    gap: 0;
+  }
+
+  .biodatas .bio-1{
+    font-size: 0.5em;
+  }
+
+  .content {
+    display: flex;
+    flex-direction: column-reverse;
+    padding: 2em 0 2em 0;
+  }
+
+  .content .content-2 {
+    display: none;
+  }
+
+  .contact {
+    padding: 0;
+  }
+
+  .contacts {
+    padding: auto;
+  }
+
+  .section .info-images .images .box {
+    width: 15vh;
+    height: 20vh;
+  }
+  
+  .biodatas img {
+    width: 20vh;
+  }
+
+  .bio-1{
+    padding: 0em 2em;
+    justify-content: center;
+    align-items: center;
+  }
+  .bio-1 a{
+    font-size: 2em;
+  }
+
+  .bio-2{
+    padding: 2em 2em;
+  }
+
+  .footer{
+    padding: 2em 2em;
+  }
+
+}
+
+@media only screen and (max-width: 930px) {
+  .info .info-images {
+    display: block;
+  }
+  .section .info-images .images .box {
+    width: 30vh;
+    height: 40vh;
+  }
+}
+
+@media only screen and (max-width: 300px) {
+  .info .info-images {
+    display: block;
+  }
+  .section .info-images .images .box {
+    width: 15vh;
+    height: 20vh;
+  }
 }
