--- a/styles/style.css
+++ b/styles/style.css
@@ -181,7 +181,7 @@ body {
   align-items: flex-end;
 }
 
-.bio-2 .right{
+.bio-2 .right {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -223,13 +223,17 @@ body {
   border: 3px solid black;
 }
 
+ngab {
+  display: none;
+}
+
 @media only screen and (max-width: 1400px) {
   .section .info-images .images .box {
     width: 20vh;
     height: 30vh;
   }
 
-  .header{
+  .header {
     height: auto;
   }
 
@@ -282,7 +286,7 @@ body {
     gap: 0;
   }
 
-  .biodatas .bio-1{
+  .biodatas .bio-1 {
     font-size: 0.5em;
   }
 
@@ -308,28 +312,27 @@ body {
     width: 15vh;
     height: 20vh;
   }
-  
+
   .biodatas img {
     width: 20vh;
   }
 
-  .bio-1{
+  .bio-1 {
     padding: 0em 2em;
     justify-content: center;
     align-items: center;
   }
-  .bio-1 a{
+  .bio-1 a {
     font-size: 2em;
   }
 
-  .bio-2{
+  .bio-2 {
     padding: 2em 2em;
   }
 
-  .footer{
+  .footer {
     padding: 2em 2em;
   }
-
 }
 
 @media only screen and (max-width: 930px) {
@@ -342,12 +345,63 @@ body {
   }
 }
 
-@media only screen and (max-width: 300px) {
+@media only screen and (max-width: 500px) {
   .info .info-images {
     display: block;
   }
   .section .info-images .images .box {
     width: 15vh;
     height: 20vh;
+  }
+  .contacts {
+    background-color: #448488;
+    color: #ebdbb2;
+    border-radius: 5px;
+    padding: 2em;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .contacts .texts{
+    padding: 1em;
+  }
+
+  .section .menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 2em;
+    align-items: center;
+  }
+}
+@media only screen and (max-width: 320px) {
+  .contacts {
+    justify-content: center;
+  }
+  .contacts .texts{
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 200px) {
+  body {
+    background-color: red;
+    padding: 1em;
+  }
+  ngab {
+    display: block;
+  }
+  header {
+    display: none;
+  }
+  main {
+    display: none;
+  }
+  footer {
+    display: none;
+  }
+  .section {
+    display: none;
   }
 }
